# lightrail

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  cmake.sh
include/: alloc.h  app.hpp  buffer.hpp  bufferwrapper.hpp  camera.h  camera.hpp  image.hpp  mesh.hpp  render-utils.hpp  renderer.h  renderer.hpp  scene.h  scene.hpp  texture.hpp  ui.h  util.h  vertex_buffer.h
shaders/: basic.frag  basic.vert  test.frag  test.vert  vert.spv
src/: alloc.c  app.cpp  buffer.cpp  bufferwrapper.cpp  camera.c  camera.cpp  image.cpp  main.c  main.cpp  mesh.cpp  render-utils.cpp  renderer.c  renderer.cpp  scene.c  scene.cpp  swapchain.c  test.c  test.cpp  texture.cpp  ui.c  util.c  vertex_buffer.c
